# ml-serving-orchestration-platform

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  tmp_mypy.txt
.github/workflows/: ci.yml
data/: sample_requests.jsonl
docs/: demo_runbook.md  k8s_runbook.md  windows_poetry_troubleshooting.md
infra/: README.md
infra/k8s/base/: configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  service.yaml
infra/k8s/overlays/canary/: configmap-patch.yaml  kustomization.yaml
scripts/: bootstrap_demo.sh  doctor.py  smoke_docker.sh  smoke_kind.sh
seed_artifacts/registry/: latest.txt
seed_artifacts/registry/aliases/: stable.json
seed_artifacts/registry/vseed0001/: metrics.json  rule_based.json  training_manifest.json
src/ml_platform/: __init__.py  cli.py  config.py  schemas.py
src/ml_platform/batch/: runner.py
src/ml_platform/data/: splits.py  synth.py
src/ml_platform/monitoring/: drift.py  health.py  logger.py  summary.py
src/ml_platform/orchestration/: dag.py  dags.py  scheduler.py  state.py
src/ml_platform/serving/: api.py  middleware.py  predictor.py  router.py
src/ml_platform/training/: metrics.py  registry.py  seed_registry.py  train.py
src/ml_platform/utils/: hashing.py  io.py
tests/: conftest.py  test_api.py  test_api_observability.py  test_data_generation.py  test_demo_cli.py  test_orchestration.py  test_predictor.py  test_registry_and_router.py  test_seed_registry.py  test_training_pipeline.py
