[tool.poetry]
name = "ml-serving-orchestration-platform"
version = "0.1.0"
description = "Lightweight ML platform for training, serving, and monitoring a product category classifier"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "ml_platform", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
typer = "^0.12.3"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
scikit-learn = "^1.5.0"
pandas = "^2.2.0"
numpy = "^2.1.0"
duckdb = "^1.0.0"
joblib = "^1.4.0"
pydantic = "^2.7.0"
httpx = "^0.27.0"
click = "8.1.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.0"
mypy = "^1.11.0"
pytest = "^8.3.0"

[tool.poetry.scripts]
mlp = "ml_platform.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ANN", "COM"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true


[tool.pytest.ini_options]
addopts = "-ra --maxfail=1"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
